--- a/aboutus.html
+++ b/aboutus.html
@@ -15,10 +15,30 @@
 </head>
 
 <body>
-
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+        <div class="container">      
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+              <span class="navbar-toggler-icon"></span>  
+            </button>
+            <a class="navbar-brand" href="./index.html">
+                Ristorante Con Fusion
+            </a>
+            <div class="collapse navbar-collapse" id="Navbar">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item"> 
+                    <a class="nav-link " href="./index.html">Home</a>
+                </li> <li cass="nav-item "><a class="nav-link active " href="./aboutus.html">About</a>
+                </li> <li cass="nav-item">   <a class="nav-link" href="#">Menu</a>
+                </li> <li cass="nav-item">  <a class="nav-link" href="#">Contanct</a>
+                </li>
+            </ul></div>
+        </div>
+    </nav>
+   
+   
     <header class="jumbotron">
         <div class="container">
-            <div class="row row-header">
+            <div class="row">
                 <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
@@ -30,8 +50,13 @@
     </header>
 
     <div class="container">
-        <div class="row ">
-            <div class="col">
+        <div class="row">
+            <ol class="col-12 breadcrumb">
+                <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                <li class="breadcrumb-item active">About Us</li>
+               
+            </ol>
+            <div class="col-12">
                <h3>About Us</h3>
                <hr>
              </div>
