--- a/aboutus.html
+++ b/aboutus.html
@@ -22,16 +22,16 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
               <span class="navbar-toggler-icon"></span>  
             </button>
-            <a class="navbar-brand" href="./index.html">
-                Ristorante Con Fusion
+            <a class="navbar-brand" href="#">
+                <img src="img/logo.png" height="30" width="41">
             </a>
-            <div class="collapse navbar-collapse" id="Navbar">
+           <div class="collapse navbar-collapse" id="Navbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"> 
                     <a class="nav-link " href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a>
                 </li> <li cass="nav-item "><a class="nav-link active " href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a>
                 </li> <li cass="nav-item">   <a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
-                </li> <li cass="nav-item">  <a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contanct</a>
+                </li> <li cass="nav-item">  <a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a>
                 </li>
             </ul></div>
         </div>
@@ -45,7 +45,8 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -96,7 +97,7 @@
             <div class="col-12">
                 <div class="card card-body bg-light">
                     <blockquote class="blockquote">
-                        <p class="mb-0">you better cut the pizza in four pieces because I'm not hungry enough to eat six.</p>
+                        <p class="mb-0">You better cut the pizza in four pieces because I'm not hungry enough to eat six.</p>
                     <footer class="blockquote-footer">Yogi Berra, <cite title="Source Title">The Wit and Wisdom of Yogi Berra, P. Pepe, Diversion Books 2014</cite></footer>
                     </blockquote>
                 </div>
