--- a/index.html
+++ b/index.html
@@ -28,15 +28,49 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"> 
                     <a class="nav-link active" href="#"><span class="fa fa-home fa-lg"></span> Home</a>
-                </li> <li cass="nav-item">                    <a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a>
-                </li> <li cass="nav-item">   <a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
-                </li> <li cass="nav-item">  <a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a>
+                </li> <li class="nav-item">                    <a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a>
+                </li> <li class="nav-item">   <a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
+                </li> <li class="nav-item">  <a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a>
                 </li>
-            </ul></div>
+            </ul>
+        <button class="btn"><a  data-toggle="modal" data-target="#loginmodal"><span class="fa fa-sign-in fa-lg"></span> Login</a></button>
+        </div>
         </div>
     </nav>
-   
+    <div id="loginmodal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>Login</h4>
+                    <button class="btn mr-0 align-self-center fa fa-close close" data-dismiss="modal"> </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="email">Email: </label>
+                                <input type="email" class="form-control " id="email" name="email" placeholder="Enter Email">
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="passwd">Password: </label>
+                                <input type="password" class="form-control" id="passwd" name="passwd" placeholder="Password">
 
+                            </div>
+                            <div class="form-group col-sm-auto">
+                                <div class="form-check">
+                                <input class="form-check-input" type="checkbox"> 
+                                <label class="form-check-label">Remember Me</label>
+                            </div></div></div>
+                            <div class="form-row">
+                                <button type="button" class="btn bg-secondary text-white ml-auto" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn bg-primary text-white ml-1">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <header class="jumbotron">
         <div class="container">
             <div class="row">
@@ -51,7 +85,9 @@
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
                     
-                    <a role="button" class="btn bg-warning text-dark btn-lg btn-block" href="#card1">   Reserve Table   </a>
+                    <a role="button" class="btn bg-warning text-dark btn-lg btn-block" data-toggle="tooltip" 
+                    data-html="true" title="or call us <br>at <strong>+91 9310110379</strong>" data-placement="bottom"
+                    href="#card1">   Reserve Table   </a>
                 </div>
             </div>
         </div>
@@ -141,7 +177,9 @@
                         <div class="row">
                             
                             <div class="col-12 offset-md-1">
-                                <button type="submit" class="btn bg-primary text-white">
+                                <button type="submit" class="btn bg-primary text-white"data-toggle="tooltip" 
+                                data-html="true" title="or call us <br>at <strong>+852 12345678</strong>" data-placement="bottom"
+             >
                                     Reserve
                                 </button>
                             </div>
@@ -196,6 +234,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function()  {
+            $('[data-toggle="tooltip"]').tooltip();            
+        })
+    </script>
 </body>
 
 </html>
