--- a/index.html
+++ b/index.html
@@ -200,10 +200,9 @@
                         <a class="carousel-control-next" role="button" data-target="#mycarousel" data-slide="next">
                             <span class="carousel-control-next-icon"></span>
                         </a>
-                        <div class="btn-group" id="carouselbuttons">
-                            <button class="btn bgbtnbg text-white btn-sm" id="carouselpause" ><span class="fa fa-pause"></span></button>
-                            <button class="btn bgbtnbg text-white btn-sm" id="carouselplay" ><span class="fa fa-play"></span></button>
-                        </div>
+                            <button class="btn  btn-outline-light btn-sm" id="carouselButton" >
+                                <span class="fa fa-pause"></span></button>
+                          
                     </div>
                 </div>
             </div>
@@ -301,12 +300,20 @@
     <script>
         $(document).ready(function() {
             $('#mycarousel').carousel({interval:2000});
-            $('#carouselpause').click(function(){
+            $('#carouselButton').click(function(){
+            if($('#carouselButton').children('span').hasClass('fa-pause'))
+            {
                 $('#mycarousel').carousel('pause');
-            });
-            $('#carouselplay').click(function() {
+                $('#carouselButton').children('span').removeClass('fa-pause');
+                $('#carouselButton').children('span').addClass('fa-play');
+            }
+            else if($('#carouselButton').children('span').hasClass('fa-play'))
+            {
                 $('#mycarousel').carousel('cycle');
-            });
+                $('#carouselButton').children('span').removeClass('fa-play');
+                $('#carouselButton').children('span').addClass('fa-pause');
+            }
+            })
         });
     </script>
 </body>
