--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
                 </li> <li class="nav-item">  <a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a>
                 </li>
             </ul>
-           </div> <button class="navbar-button btn" data-toggle="modal" data-target="#loginmodal"><span class="fa fa-sign-in fa-lg"></span> Login</button>
+           </div> <button class="navbar-button btn" id="loginbutton"><span class="fa fa-sign-in fa-lg"></span> Login</button>
            
             </div>
 
     </nav>
-    <div id="loginmodal" class="modal fade" role="dialog">
+    <div id="loginmodal" class="modal fade " role="dialog">
         <div class="modal-dialog modal-lg" role="content">
             <div class="modal-content">
                 <div class="modal-header">
                     <h2>Login</h4>
-                    <button class="btn mr-0 align-self-center fa fa-close close" data-dismiss="modal"> </button>
+                    <button class="btn mr-0 align-self-center fa fa-close close" data-dismiss="modal" id="closemodal"> </button>
                 </div>
                 <div class="modal-body">
                     <form>
@@ -71,12 +71,12 @@
                 </div>
             </div>
         </div>
-        <div class="modal container fade" id="reservemodal" role="dialog">
+        <div class="modal container fade " id="reservemodal" role="dialog">
            <div class="modal-dialog modal-lg " role="content">
             <div class="modal-content">
             <div  class="modal-header ">
                 <h2>Reserve A table</h2>
-                <button class="btn mr-0" data-dismiss="modal"><span class="fa fa-close"></span></button>
+                <button class="btn mr-0 fa fa-close align-self-center close" data-dismiss="modal" id="closemodal"></button>
             </div>
         <div class="modal-body ">
             <div class="form-group row ">
@@ -150,9 +150,7 @@
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
                     
-                    <a role="button" class="btn bg-warning text-dark btn-lg btn-block" 
-                 data-toggle="modal"
-                    href="#reservemodal">   Reserve Table   </a>
+                    <a role="button" class="btn bg-warning text-dark btn-lg btn-block" id="reservebutton">   Reserve Table   </a>
                 </div>
             </div>
         </div>
@@ -300,6 +298,12 @@
     <script>
         $(document).ready(function() {
             $('#mycarousel').carousel({interval:2000});
+            $('#loginbutton').click(function() {
+                $('#loginmodal').modal();
+            })
+            $('#reservebutton').click(function() {
+                $('#reservemodal').modal();
+            })
             $('#carouselButton').click(function(){
             if($('#carouselButton').children('span').hasClass('fa-pause'))
             {
