--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </div>
-        <div class="modal container fade " id="reservemodal" role="dialog">
+        <div class="modal fade " id="reservemodal" role="dialog">
            <div class="modal-dialog modal-lg " role="content">
             <div class="modal-content">
             <div  class="modal-header ">
